--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "react-icons": "^5.2.0"
+        "react-icons": "^5.2.0",
+        "ziggy-js": "^1.0.5"
     }
 }
